snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210922.132251-3.jar.sha256
1604f03a69ae58f7849745658d070e5a2431f127b2c4c47ae2afff34ccc0194b